Develop Post&User Controller Api side
